Prepare for final submission

--- a/optimset.bib
+++ b/optimset.bib
@@ -39,7 +39,7 @@
 @inproceedings{Conn_Scheinberg_Toint_1998,
     title        = {A derivative free optimization algorithm in practice},
     author       = {Conn, A. R. and Scheinberg, K. and Toint, Ph. L.},
-    booktitle    = {Proceedings of the 7th AIAA/USAF/NASA/ISSMO Symposium on Multidisciplinary Analysis and Optimization},
+    booktitle    = {7th AIAA/USAF/NASA/ISSMO Symposium on Multidisciplinary Analysis and Optimization},
     publisher    = {AIAA},
     address      = {St.\ Louis, MO, USA},
     pages        = {129--139},
@@ -55,10 +55,11 @@
     year         = 2009,
 }
 
-@inproceedings{Custodio_Scheinberg_Vicente_2017,
+@incollection{Custodio_Scheinberg_Vicente_2017,
     title        = {Methodologies and software for derivative-free optimization},
     author       = {Cust{\'{o}}dio, A. L. and Scheinberg, K. and Vicente, L. N.},
     booktitle    = {Advances and Trends in Optimization with Engineering Applications},
+    series       = {MOS-SIAM Ser. Optim.},
     editor       = {Terlaky, T. and Anjos, M. F. and Ahmed, S.},
     publisher    = {SIAM},
     address      = {Philadelphia, PA, USA},
@@ -106,7 +107,7 @@
     title        = {Black-box optimization in machine learning with trust region based derivative free algorithm},
     author       = {Ghanbari, H. and Scheinberg, K.},
     number       = {17T-005},
-    institution  = {COR@L},
+    institution  = {COR{@}L},
     address      = {Bethlehem, PA, USA},
     year         = 2017,
 }
@@ -148,7 +149,7 @@
 }
 
 @article{Powell_2004a,
-    title        = {Least \reviewed{{F}robenius} norm updating of quadratic models that satisfy interpolation conditions},
+    title        = {Least {F}robenius norm updating of quadratic models that satisfy interpolation conditions},
     author       = {Powell, M. J. D.},
     journal      = {Math. Program.},
     volume       = 100,
@@ -156,7 +157,7 @@
     year         = 2004,
 }
 
-@inproceedings{Powell_2004b,
+@incollection{Powell_2004b,
     title        = {On updating the inverse of a {KKT} matrix},
     author       = {Powell, M. J. D.},
     booktitle    = {Numerical Linear Algebra and Optimization},
@@ -167,7 +168,7 @@
     year         = 2004,
 }
 
-@inproceedings{Powell_2006,
+@incollection{Powell_2006,
     title        = {The {NEWUOA} software for unconstrained optimization without derivatives},
     author       = {Powell, M. J. D.},
     booktitle    = {Large-Scale Nonlinear Optimization},
