--- a/optimset.tex
+++ b/optimset.tex
@@ -589,7 +589,7 @@ To this end, recall the following elementary fact.
     So, we assume that both of them are finite.
 
     Consider the case where~$p \le q$.
-    For~$x \in \mathcal{B}_p(1)$, we have~$\norm{x}_q \le \norm{x}_p \le 1$, and this bound is attained at the first coordinate vector~$e_1 \in \mathcal{B}_p(1)$, so that~\eqref{eq:max-norm-pq} holds in this case.
+    For~$x \in \mathcal{B}_p(1)$, we have~$\norm{x}_q^q \le \norm{x}_p^p \le 1$, and this bound is attained at the first coordinate vector~$e_1 \in \mathcal{B}_p(1)$, so that~\eqref{eq:max-norm-pq} holds in this case.
 
     We now suppose that~$p > q$.
     Let~$\ones \in \R^n$ denote the vector with all entries being one,~$r = p/q$, and~$s = r / (r - 1) = p / (p - q)$.
