--- a/optimset.tex
+++ b/optimset.tex
@@ -685,7 +685,11 @@ Zaikun Zhang would like to thank the late Professor Oleg Burdakov for his friend
 \paragraph*{Disclosure statement}
 The authors report that there are no competing interests to declare.
 
-\paragraph*{Funding} This work was funded by the University Grants Committee of Hong Kong under projects PF18-24698 (Hong Kong PhD Fellowship Scheme), PolyU 253012/17P, PolyU 153054/20P, and PolyU 153066/21P. It was also supported by The Hong Kong Polytechnic University under project P0009767.
+\paragraph*{Funding} This work was funded by the University Grants Committee of Hong Kong under
+projects PF18-24698 (Hong Kong PhD Fellowship Scheme), PolyU 253012/17P, PolyU 153054/20P, PolyU
+153066/21P, and PolyU 153086/23P. It was also supported by The Hong Kong Polytechnic University
+under projects P0009767, P0038928, P0045598,
+\modified{and the CAS-Croucher Funding Scheme for ``CAS AMSS-PolyU Joint Laboratory of Applied Mathematics: Nonlinear Optimization Theory, Algorithms and Applications''}.
 
 \bibliography{optimset}
 
