--- a/optimset.tex
+++ b/optimset.tex
@@ -689,7 +689,7 @@ The authors report that there are no competing interests to declare.
 projects PF18-24698 (Hong Kong PhD Fellowship Scheme), PolyU 253012/17P, PolyU 153054/20P, PolyU
 153066/21P, and PolyU 153086/23P. It was also supported by The Hong Kong Polytechnic University
 under projects P0009767, P0038928, P0045598,
-\modified{and the CAS-Croucher Funding Scheme for ``CAS AMSS-PolyU Joint Laboratory of Applied Mathematics: Nonlinear Optimization Theory, Algorithms and Applications''}.
+and the CAS-Croucher Funding Scheme for ``CAS AMSS-PolyU Joint Laboratory of Applied Mathematics: Nonlinear Optimization Theory, Algorithms and Applications''.
 
 \bibliography{optimset}
 
