Use double quotation marks

--- a/optimset.tex
+++ b/optimset.tex
@@ -36,7 +36,7 @@
 % Manage culturally-determined typographical rules
 % N.B.: `csquotes' must be loaded after `lineno'
 \usepackage[british]{babel}
-\usepackage{csquotes}
+\usepackage[style=american]{csquotes}
 
 % Font and encoding
 \usepackage{lmodern}
