change equation labeling

--- a/optimset.tex
+++ b/optimset.tex
@@ -100,7 +100,7 @@
 \usepackage{amssymb}
 \usepackage{cases}
 \usepackage[bb=dsfontserif]{mathalpha}
-\numberwithin{equation}{section}
+%\numberwithin{equation}{section}
 
 % Mathematical environments (theorems, proofs, ...)
 \usepackage{amsthm}
