--- a/optimset.tex
+++ b/optimset.tex
@@ -176,12 +176,12 @@
     Tom M. Ragonneau%
     \thanks{Department of Applied Mathematics, The Hong Kong Polytechnic University, Hong Kong, China.}%
     \thanksgap{1ex}%
-    \thanks{\email{tom.ragonneau@polyu.edu.hk}; \orcid{0000-0003-2717-2876}.}
+    \thanks{\email{tom.ragonneau@gmail.com}; \orcid{0000-0003-2717-2876}.}
     \and
     Zaikun Zhang%
     \texorpdfstring{\thanksmark{1}}{}%
     \thanksgap{1ex}%
-    \thanks{\email{zaikun.zhang@polyu.edu.hk}; \orcid{0000-0001-8934-8190}.}
+    \thanks{\email{zaikun.zhang@gmail.com}; \orcid{0000-0001-8934-8190}.}
 }
 \date{\today}
 
