--- a/optimset.tex
+++ b/optimset.tex
@@ -181,7 +181,7 @@
     Zaikun Zhang%
     \texorpdfstring{\thanksmark{1}}{}%
     \thanksgap{1ex}%
-    \thanks{\email{zaikun.zhang@gmail.com}; \orcid{0000-0001-8934-8190}.}
+    \thanks{\email{zaikunzhang@gmail.com}; \orcid{0000-0001-8934-8190}.}
 }
 \date{\today}
 
